o.c.ams: Added check for null to avoid NullPointerException in case of missing comparative value in PV conditions.